Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-115175

QtProtobuf nested message generation error

XMLWordPrintable

    • 03ccff3aa (dev), 32e57bd1a (6.5), 8fd011d7e (6.6)

      It seems like following nested construction is not supported by QtProtobufgen:

       

      message NestedFieldMessage {
          sint32 testFieldInt = 1;
          message NestedMessage {
              sint32 testFieldInt = 1;
          }
          NestedMessage nested = 2;
          message SecondNestedMessage {
              sint32 testFieldInt = 1;
          }
          message ThirdNestedMessage {
              sint32 testFieldInt = 1;
          }
      }
      

      Expected result:

      All 4 Cpp classes are generated.

      Actual result:

      Only  main message NestedFieldMessage and first declared message NestedMessage are generated.

       

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            semlanik Alexey Edelev
            tatiana.borisova Tatiana Borisova
            Vladimir Mikulaj Vladimir Mikulaj
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes